@@ -60,6 +60,8 @@ SOURCES += 								\
 	LocalSiderealTime.cpp						\
 	LocalTimeWidget.cpp						\
 	LogSpinBox.cpp							\
+	OffsetDial.cpp							\
+	RotateDial.cpp							\
 	Scaler.cpp							\
 	SelectableImage.cpp						\
 	SkyDisplayWidget.cpp						\
@@ -90,6 +92,8 @@ HEADERS  += 								\
 	LocalSiderealTime.h						\
 	LocalTimeWidget.h						\
 	LogSpinBox.h							\
+	OffsetDial.h							\
+	RotateDial.h							\
 	Scaler.h							\
 	SelectableImage.h						\
 	SkyDisplayWidget.h						\
