@@ -1,5 +1,10 @@
 ChangeLog for the Qt GUI to Astrophotography
 
+20190913:
+	* add Button for time offset to SkyDisplayWidget
+	* create RotateButton and OffsetButton classes to display current
+	  values
+
 20190911:
 	* add a rotation dial to SkyDisplayWidget
 	* add rotation to SkyDrawing
